<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language_settings"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/hanyang_blue"
        android:padding="20dp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/language_korean"
        android:text="@string/language_korean"
        android:textSize="18sp"
        android:textColor="@color/primary_text"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/app_separator"/>
    <TextView
        android:id="@+id/language_english"
        android:text="@string/language_english"
        android:textSize="18sp"
        android:textColor="@color/primary_text"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/app_separator"/>
    <TextView
        android:id="@+id/language_japanese"
        android:text="@string/language_japanese"
        android:textSize="18sp"
        android:textColor="@color/primary_text"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/app_separator"/>
    <TextView
        android:id="@+id/language_chinese"
        android:text="@string/language_chinese"
        android:textSize="18sp"
        android:textColor="@color/primary_text"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
</LinearLayout>
