<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/hanyang_blue"
            app:menu="@menu/full_screen_menu"
            app:title="@string/shuttle_timetable_filter_title"
            app:titleCentered="true"
            app:titleTextColor="@android:color/white" />
    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:id="@+id/shuttle_period_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shuttle_period"
        android:textSize="18sp"
        android:textColor="@color/primary_text"
        android:textFontWeight="600"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintStart_toStartOf="parent" />
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/shuttle_period_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/shuttle_period_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:singleSelection="true">
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/semester_button"
            android:text="@string/shuttle_period_semester"
        />
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/vacation_session_button"
            android:text="@string/shuttle_period_vacation_session"
        />
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/vacation_button"
            android:text="@string/shuttle_period_vacation"
        />
    </com.google.android.material.button.MaterialButtonToggleGroup>
    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/confirm"
        app:layout_constraintTop_toBottomOf="@id/shuttle_period_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
